--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,17 +1,24 @@
-altgraph @ file:///AppleInternal/Library/BuildRoots/2c89a47b-9dd5-11ef-938f-6e654a286000/Library/Caches/com.apple.xbs/Sources/python3/altgraph-0.17.2-py2.py3-none-any.whl
+altgraph==0.17.2
+future==0.18.2
+macholib==1.15.2
+six==1.15.0
+
+
+
 asgiref==3.9.0
 certifi==2025.6.15
 charset-normalizer==3.4.2
 Django==4.2.23
 django-cors-headers==4.7.0
-future @ file:///AppleInternal/Library/BuildRoots/2c89a47b-9dd5-11ef-938f-6e654a286000/Library/Caches/com.apple.xbs/Sources/python3/future-0.18.2-py3-none-any.whl
+
 idna==3.10
-macholib @ file:///AppleInternal/Library/BuildRoots/2c89a47b-9dd5-11ef-938f-6e654a286000/Library/Caches/com.apple.xbs/Sources/python3/macholib-1.15.2-py2.py3-none-any.whl
+
 psycopg2-binary==2.9.10
 python-dotenv==1.1.1
 requests==2.32.4
-six @ file:///AppleInternal/Library/BuildRoots/2c89a47b-9dd5-11ef-938f-6e654a286000/Library/Caches/com.apple.xbs/Sources/python3/six-1.15.0-py2.py3-none-any.whl
+
 sqlparse==0.5.3
 typing_extensions==4.14.0
 urllib3==2.5.0
 uuid==1.30
+
